# spotilocker

./: .env.example  Cargo.toml  Dockerfile  db.sqlite
client/: index.html  package.json
client/src/: App.tsx  index.css
client/src/components/: Nav.tsx  UserProfile.tsx
client/src/routes/: Home.tsx  ViewList.tsx
migrations/: 20260701175346_initial-ver.sql  20260701175936_add_play_count.sql
src/: api.rs  errors.rs  main.rs  models.rs  routes.rs
src/api/: api.rs
src/models/: track.rs  user.rs
src/routes/: app_login.rs  login.rs  login_callback.rs  refresh_library.rs  top_songs.rs
