[package]
name = "spotilocker_2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
handlebars = "6.4.0"
reqwest = { version = "0.13.2", features = ["form", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
tokio = { version = "1.51.1", features = ["rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs"] }
