[package]
name = "spotilocker_2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["macros"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
handlebars = "6.4.2"
jsonwebtoken = "10.4.0"
log = "0.4.33"
reqwest = { version = "0.13.4", features = ["form", "json", "multipart"] }
scrypt = { version = "0.12.0", features = ["password-hash"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
